// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Popover Control Examples 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    class="fd-popover fd-popover--right"
  >
    
        
    <div
      class="fd-popover__control"
      style="width: 48px; height: 48px;"
    >
      
            
      <span
        aria-controls="popoverB2"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Image label"
        class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail aria-label="
        image=""
        label"=""
        onclick="onPopoverClick('popoverB2');"
        style="background-image: url('http://lorempixel.com/200/200/nature/2/');"
      />
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--left"
      id="popoverB2"
    >
      
            
      <nav
        class="fd-menu"
        id=""
      >
        
                
        <ul
          class="fd-menu__list fd-menu__list--no-shadow"
        >
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 1
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 2
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 3
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 4
              </span>
              
                        
            </a>
            
                    
          </li>
          
                
        </ul>
        
            
      </nav>
      
        
    </div>
    
    
  </div>
  

    
  <div
    class="fd-popover fd-popover--right"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <span
        aria-controls="popoverB4"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Image label"
        class="sap-icon--cart sap-icon--xl"
        onclick="onPopoverClick('popoverB4');"
      />
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
      id="popoverB4"
    >
      
            
      <nav
        class="fd-menu"
        id=""
      >
        
                
        <ul
          class="fd-menu__list fd-menu__list--no-shadow"
        >
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 1
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 2
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 3
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 4
              </span>
              
                        
            </a>
            
                    
          </li>
          
                
        </ul>
        
            
      </nav>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Popover Overflow Protection 1`] = `


`;

exports[`Storyshots Components/Popover Placement Options 1`] = `
<div
  class="fddocs-container"
>
   
        
  <div
    class="fd-popover"
  >
    
            
    <div
      class="fd-popover__control"
    >
      
                
      <button
        aria-controls="popoverA1"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Image label"
        class="fd-button"
        onclick="onPopoverClick('popoverA1');"
      >
        Left Aligned (default)
      </button>
      
            
    </div>
    
            
    <div
      aria-hidden="true"
      class="fd-popover__body"
      id="popoverA1"
    >
      
                
      <nav
        class="fd-menu"
        id=""
      >
        
                    
        <ul
          class="fd-menu__list fd-menu__list--no-shadow"
        >
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 1
              </span>
              
                            
            </a>
            
                        
          </li>
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 2
              </span>
              
                            
            </a>
            
                        
          </li>
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 3
              </span>
              
                            
            </a>
            
                        
          </li>
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 4
              </span>
              
                            
            </a>
            
                        
          </li>
          
                    
        </ul>
        
                
      </nav>
      
            
    </div>
    
        
  </div>
  

        
  <div
    class="fd-popover fd-popover--right"
  >
    
            
    <div
      class="fd-popover__control"
    >
      
                
      <button
        aria-controls="popoverA2"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Image label"
        class="fd-button"
        onclick="onPopoverClick('popoverA2');"
      >
        Right Aligned
      </button>
      
            
    </div>
    
            
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--right"
      id="popoverA2"
    >
      
                
      <div
        style="margin: 20px;"
      >
        
                    
        <span
          aria-label="Nature"
          class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--thumbnail"
          role="presentation"
          style="background-image: url('http://lorempixel.com/200/200/nature/4/');"
        />
        
                
      </div>
      
            
    </div>
    
        
  </div>
  

        
  <div
    class="fd-popover"
  >
    
            
    <div
      class="fd-popover__control"
    >
      
                
      <button
        aria-controls="popoverA3"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Image label"
        class="fd-button"
        onclick="onPopoverClick('popoverA3');"
      >
        No Arrow & Left Aligned
      </button>
      
            
    </div>
    
            
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow"
      id="popoverA3"
    >
      
                
      <nav
        class="fd-menu"
        id=""
      >
        
                    
        <ul
          class="fd-menu__list fd-menu__list--no-shadow"
        >
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 1
              </span>
              
                            
            </a>
            
                        
          </li>
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 2
              </span>
              
                            
            </a>
            
                        
          </li>
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 3
              </span>
              
                            
            </a>
            
                        
          </li>
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 4
              </span>
              
                            
            </a>
            
                        
          </li>
          
                    
        </ul>
        
                
      </nav>
      
            
    </div>
    
        
  </div>
  

        
  <div
    class="fd-popover fd-popover--right"
  >
    
            
    <div
      class="fd-popover__control"
    >
      
                
      <button
        aria-controls="popoverA4"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Image label"
        class="fd-button"
        onclick="onPopoverClick('popoverA4');"
      >
        No Arrow & Right Aligned
      </button>
      
            
    </div>
    
            
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
      id="popoverA4"
    >
      
                
      <nav
        class="fd-menu"
        id=""
      >
        
                    
        <ul
          class="fd-menu__list fd-menu__list--no-shadow"
        >
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 1
              </span>
              
                            
            </a>
            
                        
          </li>
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 2
              </span>
              
                            
            </a>
            
                        
          </li>
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 3
              </span>
              
                            
            </a>
            
                        
          </li>
          
                        
          <li
            class="fd-menu__item"
          >
            
                            
            <a
              class="fd-menu__link"
              href="#"
            >
              
                                
              <span
                class="fd-menu__title"
              >
                Option 4
              </span>
              
                            
            </a>
            
                        
          </li>
          
                    
        </ul>
        
                
      </nav>
      
            
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Components/Popover Popover with Header, Subheader and Footer 1`] = `
<div
  class="fddocs-container"
>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <button
        aria-controls="popoverHSF1"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Image label"
        class="fd-button"
        onclick="onPopoverClick('popoverHSF1');"
      >
        Header Only
      </button>
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body"
      id="popoverHSF1"
    >
      
            
      <div
        class="fd-popover__body-header"
      >
        
                
        <div
          class="fd-bar fd-bar--header"
        >
          
                    
          <div
            class="fd-bar__left"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--transparent"
              >
                
                                
                <i
                  class="sap-icon--navigation-left-arrow"
                />
                
                            
              </button>
              
                        
            </div>
            
                        
            <div
              class="fd-bar__element"
            >
              
                            Header
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
            
      <nav
        class="fd-menu"
        id=""
      >
        
                
        <ul
          class="fd-menu__list fd-menu__list--no-shadow"
        >
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 1
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 2
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 3
              </span>
              
                        
            </a>
            
                    
          </li>
          
                    
          <li
            class="fd-menu__item"
          >
            
                        
            <a
              class="fd-menu__link"
              href="#"
            >
              
                            
              <span
                class="fd-menu__title"
              >
                Option 4
              </span>
              
                        
            </a>
            
                    
          </li>
          
                
        </ul>
        
            
      </nav>
      
        
    </div>
    
    
  </div>
  

    
  <div
    class="fd-popover fd-popover--right"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <button
        aria-controls="popoverHSF2"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Image label"
        class="fd-button"
        onclick="onPopoverClick('popoverHSF2');"
      >
        Footer Only
      </button>
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--right"
      id="popoverHSF2"
    >
      
            
      <div
        style="margin: 20px;"
      >
        
                
        <span
          aria-label="Nature"
          class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--thumbnail"
          role="presentation"
          style="background-image: url('http://lorempixel.com/200/200/nature/8/');"
        />
        
            
      </div>
      
            
      <div
        class="fd-popover__body-footer"
      >
        
                
        <div
          class="fd-bar fd-bar--footer"
        >
          
                    
          <div
            class="fd-bar__right"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--compact fd-button--emphasized"
              >
                Save
              </button>
              
                        
            </div>
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--compact fd-button--transparent"
              >
                Cancel
              </button>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

    
  <div
    class="fd-popover"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <button
        aria-controls="popoverHSF3"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Image label"
        class="fd-button"
        onclick="onPopoverClick('popoverHSF3');"
      >
        With Header, Subheader and Footer
      </button>
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow"
      id="popoverHSF3"
    >
      
            
      <div
        class="fd-popover__body-header"
      >
        
                
        <div
          class="fd-bar fd-bar--header-with-subheader"
        >
          
                    
          <div
            class="fd-bar__left"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--transparent"
              >
                
                                
                <i
                  class="sap-icon--navigation-left-arrow"
                />
                
                            
              </button>
              
                        
            </div>
            
                        
            <div
              class="fd-bar__element"
            >
              
                            Header
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
                
        <div
          class="fd-bar fd-bar--subheader"
        >
          
                    
          <div
            class="fd-bar__middle"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <div
                class="fd-form-item"
              >
                
                                
                <div
                  aria-label="Group label"
                  class="fd-segmented-button"
                  role="group"
                >
                  
                                    
                  <button
                    aria-pressed="true"
                    class="fd-button fd-button--compact"
                  >
                    
                                        
                    <i
                      class="sap-icon--email"
                    />
                    
                                    
                  </button>
                  
                                    
                  <button
                    class="fd-button fd-button--compact"
                  >
                    
                                        
                    <i
                      class="sap-icon--iphone"
                    />
                    
                                    
                  </button>
                  
                                    
                  <button
                    class="fd-button fd-button--compact"
                  >
                    
                                        
                    <i
                      class="sap-icon--notification-2"
                    />
                    
                                    
                  </button>
                  
                                
                </div>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
            
      <div
        style="margin: 20px 80px;"
      >
        
                
        <span
          aria-label="Nature"
          class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--thumbnail"
          role="presentation"
          style="background-image: url('http://lorempixel.com/100/100/nature/10/');"
        />
        
            
      </div>
      
            
      <div
        class="fd-popover__body-footer"
      >
        
                
        <div
          class="fd-bar fd-bar--footer"
        >
          
                    
          <div
            class="fd-bar__right"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--compact fd-button--emphasized"
              >
                Save
              </button>
              
                        
            </div>
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--compact fd-button--transparent"
              >
                Cancel
              </button>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

    
  <div
    class="fd-popover"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <button
        aria-controls="popoverHSF345"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Image label"
        class="fd-button"
        onclick="onPopoverClick('popoverHSF345');"
      >
        All Cozy Mode
      </button>
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow"
      id="popoverHSF345"
    >
      
            
      <div
        class="fd-popover__body-header"
      >
        
                
        <div
          class="fd-bar fd-bar--cozy fd-bar--header-with-subheader"
        >
          
                    
          <div
            class="fd-bar__left"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--transparent"
              >
                
                                
                <i
                  class="sap-icon--navigation-left-arrow"
                />
                
                            
              </button>
              
                        
            </div>
            
                        
            <div
              class="fd-bar__element"
            >
              
                            Header
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-bar fd-bar--cozy fd-bar--subheader"
      >
        
                    
        <div
          class="fd-bar__middle"
        >
          
                        
          <div
            class="fd-bar__element"
          >
            
                            
            <div
              class="fd-form-item"
            >
              
                                
              <div
                aria-label="Group label"
                class="fd-segmented-button"
                role="group"
              >
                
                                    
                <button
                  aria-pressed="true"
                  class="fd-button fd-button--compact"
                >
                  
                                        
                  <i
                    class="sap-icon--email"
                  />
                  
                                    
                </button>
                
                                    
                <button
                  class="fd-button fd-button--compact"
                >
                  
                                        
                  <i
                    class="sap-icon--iphone"
                  />
                  
                                    
                </button>
                
                                    
                <button
                  class="fd-button fd-button--compact"
                >
                  
                                        
                  <i
                    class="sap-icon--notification-2"
                  />
                  
                                    
                </button>
                
                                
              </div>
              
                            
            </div>
            
                        
          </div>
          
                    
        </div>
        
                
      </div>
      
            
      <div
        style="margin: 20px 80px;"
      >
        
                
        <span
          aria-label="Nature"
          class="fd-avatar fd-avatar--xl fd-avatar--circle fd-avatar--thumbnail"
          role="presentation"
          style="background-image: url('http://lorempixel.com/100/100/nature/2/');"
        />
        
            
      </div>
      
            
      <div
        class="fd-popover__body-footer"
      >
        
                
        <div
          class="fd-bar fd-bar--cozy fd-bar--footer"
        >
          
                    
          <div
            class="fd-bar__right"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--compact fd-button--emphasized"
              >
                Save
              </button>
              
                        
            </div>
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--compact fd-button--transparent"
              >
                Cancel
              </button>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;
